--- a/files/qredshift@quintao/po/es.po
+++ b/files/qredshift@quintao/po/es.po
@@ -327,9 +327,9 @@ msgstr ""
 
 #. settings-schema.json->textHelp->description
 msgid ""
-"When update to a new version make sure you reset the configs to default by "
+"When updating to a new version make sure you reset the configs to default by "
 "deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
-"You will lost all your configs."
+"You will lose all your configs."
 msgstr ""
 "Cuando actualice a una nueva versión, asegúrese de restablecer la "
 "configuración por defecto borrando el archivo ~/.cinnamon/configs/"
