--- a/files/qredshift@quintao/po/nl.po
+++ b/files/qredshift@quintao/po/nl.po
@@ -329,9 +329,9 @@ msgstr ""
 
 #. settings-schema.json->textHelp->description
 msgid ""
-"When update to a new version make sure you reset the configs to default by "
+"When updating to a new version make sure you reset the configs to default by "
 "deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
-"You will lost all your configs."
+"You will lose all your configs."
 msgstr ""
 "Als u een nieuwe versie installeert, wis dan de configuratiebestanden door "
 "de map ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json te "
