--- a/files/qredshift@quintao/po/oc.po
+++ b/files/qredshift@quintao/po/oc.po
@@ -322,9 +322,9 @@ msgstr ""
 
 #. settings-schema.json->textHelp->description
 msgid ""
-"When update to a new version make sure you reset the configs to default by "
+"When updating to a new version make sure you reset the configs to default by "
 "deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
-"You will lost all your configs."
+"You will lose all your configs."
 msgstr ""
 
 #. settings-schema.json->textInfo->description
