--- a/files/qredshift@quintao/po/sk.po
+++ b/files/qredshift@quintao/po/sk.po
@@ -325,9 +325,9 @@ msgstr ""
 
 #. settings-schema.json->textHelp->description
 msgid ""
-"When update to a new version make sure you reset the configs to default by "
+"When updating to a new version make sure you reset the configs to default by "
 "deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
-"You will lost all your configs."
+"You will lose all your configs."
 msgstr ""
 "Po aktualizácii na novú verziu sa uistite, že ste obnovili konfigurácie na "
 "predvolené hodnoty, odstránením súboru ~/.cinnamon/configs/qredshift@quintao/"
