--- a/files/qredshift@quintao/po/it.po
+++ b/files/qredshift@quintao/po/it.po
@@ -7,94 +7,121 @@ msgid ""
 msgstr ""
 "Project-Id-Version: qredshift@quintao\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-04 13:58-0300\n"
-"PO-Revision-Date: 2021-12-01 00:19+0100\n"
+"POT-Creation-Date: 2023-07-16 04:01+0200\n"
+"PO-Revision-Date: 2023-10-29 17:09+0100\n"
+"Last-Translator: Dragone2 <dragone2@risposteinformatiche.it>\n"
+"Language-Team: \n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: Emiliano Perulli <emiliano.perulli1980@gmail.com>\n"
-"Language-Team: \n"
-"Language: it\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
-#: applet.js:115
-msgid "REDSHIFT NOT INSTALLED!"
-msgstr "REDSHIT NON INSTALLATO!"
-
-#: applet.js:116
-msgid "Requires Redshift: sudo apt-get install redshift"
-msgstr "Richiede Redshift: sudo apt-get install redshift"
-
-#: applet.js:119 applet.js:159
+#: applet.js:236
 msgid "Reload Applet"
 msgstr "Ricarica Applet"
 
-#: applet.js:164
+#: applet.js:247
 msgid "Recompile Translations"
 msgstr "Ricompila le traduzioni"
 
+#: applet.js:299
+msgid "REDSHIFT NOT INSTALLED!"
+msgstr "REDSHIT NON INSTALLATO!"
+
+#: applet.js:302
+msgid "Requires Redshift: yay -S redshift-minimal"
+msgstr "Richiede Redshift: yay -S redshift-minimal"
+
+#: applet.js:305
+msgid "Requires Redshift: sudo apt-get install redshift"
+msgstr "Richiede Redshift: sudo apt-get install redshift"
+
+#: applet.js:457 applet.js:486
+msgid "should be removed."
+msgstr "dovrebbe essere rimosso."
+
+#: applet.js:479
+msgid "should be replaced by redshift-minimal"
+msgstr "dovrebbe essere sostituito da redshift-minimal"
+
 #. settings-schema.json->enabled->description
-#: applet.js:356
+#: applet.js:649
 msgid "Enabled"
 msgstr "Abilita"
 
-#: applet.js:364 applet.js:410
+#: applet.js:657 applet.js:702
 msgid "Temp:"
 msgstr "Temp. :"
 
-#: applet.js:375 applet.js:421
+#: applet.js:668 applet.js:713
 msgid "Bright:"
 msgstr "Luminosità:"
 
-#: applet.js:387 applet.js:635
+#: applet.js:679 applet.js:1011
 msgid "Gamma:"
 msgstr "Gamma:"
 
 #. settings-schema.json->enabledNight->description
-#: applet.js:402
+#: applet.js:694
 msgid "Night Enabled"
 msgstr "Abilita i parametri notturni"
 
 #. settings-schema.json->iconLabel->description
-#: applet.js:464
+#: applet.js:756
 msgid "Show Label"
 msgstr "Mostra l'etichetta dei parametri correnti"
 
-#: applet.js:618
+#: applet.js:969 applet.js:994
+msgid "Transition to day"
+msgstr "Transizione al giorno"
+
+#: applet.js:970 applet.js:995
+msgid "Transition to night"
+msgstr "Transizione alla notte"
+
+#: applet.js:971 applet.js:996
+msgid "Night"
+msgstr "Notte"
+
+#: applet.js:972 applet.js:997
+msgid "Day"
+msgstr "Giorno"
+
+#: applet.js:986
 msgid "On"
 msgstr "Attivo"
 
-#: applet.js:618 applet.js:620
+#: applet.js:986 applet.js:988
 msgid "Off"
 msgstr "Non attivo"
 
-#: applet.js:626
+#: applet.js:1002
 msgid "Day Temperature"
 msgstr "Temperatura diurna"
 
-#: applet.js:627
+#: applet.js:1003
 msgid "Day Brightness"
 msgstr "Luminosità  diurna"
 
-#: applet.js:629
+#: applet.js:1005
 msgid "Night Temperature"
 msgstr "Temperatura notturna"
 
-#: applet.js:630
+#: applet.js:1006
 msgid "Night Brightness"
 msgstr "Luminosità notturna"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->dayTemp->description
 #. settings-schema.json->nightTemp->description
-#: applet.js:632
+#: applet.js:1008
 msgid "Temperature"
 msgstr "Temperatura"
 
 #. settings-schema.json->dayBrightness->description
 #. settings-schema.json->nightBrightness->description
-#: applet.js:633
+#: applet.js:1009
 msgid "Brightness"
 msgstr "Luminosità"
 
@@ -104,11 +131,11 @@ msgstr "QRedshift"
 
 #. metadata.json->description
 msgid ""
-"Sets brightness, gamma levels and color temperature with Redshift. This applet conflicts with redshift-gtk, make sure "
-"you remove it."
+"It makes the color of your computer's display adapt to the time of day, warm "
+"at night and like sunlight during the day."
 msgstr ""
-"Regola luminosità, gamma e temperatura del colore con Redshift. L'applet va in conflitto con il pacchetto redshift-gtk. "
-"Assicurarsi di rimuoverlo."
+"Fa adattare il colore del display del tuo computer all'ora del giorno, caldo "
+"di notte e come la luce del sole durante il giorno."
 
 #. settings-schema.json->panel-options->title
 msgid "Settings"
@@ -155,8 +182,8 @@ msgid "Continuously adjust color temperature"
 msgstr "Regola continuamente la temperatura del colore"
 
 #. settings-schema.json->autoUpdateInterval->units
-msgid "Sec."
-msgstr "Sec."
+msgid "Seconds"
+msgstr "Secondi"
 
 #. settings-schema.json->autoUpdateInterval->description
 msgid "Update interval"
@@ -195,6 +222,24 @@ msgstr "Nessuna azione"
 msgid "On/Off"
 msgstr "Attiva/Disattiva"
 
+#. settings-schema.json->labelScrollAction->options
+msgid "Bright"
+msgstr "Regola luminosità"
+
+#. settings-schema.json->labelScrollAction->options
+#. settings-schema.json->gammaMix->description
+msgid "Gamma"
+msgstr "Regola gamma"
+
+#. settings-schema.json->labelScrollAction->tooltip
+msgid "Action when scroll on applet icon."
+msgstr ""
+"Definsice l'azione della rotellina del mouse quando si scorre sull'icona."
+
+#. settings-schema.json->symbolicIcon->description
+msgid "Use symbolic icon"
+msgstr "Usa un'icona simbolica"
+
 #. settings-schema.json->keyBrightnessUp->description
 msgid "Increase brightness level"
 msgstr "Aumenta luminosità"
@@ -219,19 +264,6 @@ msgstr "Aumenta gamma"
 msgid "Decrease gamma level"
 msgstr "Diminuisci gamma"
 
-#. settings-schema.json->labelScrollAction->options
-msgid "Bright"
-msgstr "Regola luminosità"
-
-#. settings-schema.json->labelScrollAction->options
-#. settings-schema.json->gammaMix->description
-msgid "Gamma"
-msgstr "Regola gamma"
-
-#. settings-schema.json->labelScrollAction->tooltip
-msgid "Action when scroll on applet icon."
-msgstr "Definsice l'azione della rotellina del mouse quando si scorre sull'icona."
-
 #. settings-schema.json->dayTemp->units
 #. settings-schema.json->nightTemp->units
 msgid "K"
@@ -242,6 +274,30 @@ msgstr "K"
 msgid "%"
 msgstr "%"
 
+#. settings-schema.json->smoothTransition->description
+msgid "Smooth transition between day and night"
+msgstr "Transizione fluida tra il giorno e la notte"
+
+#. settings-schema.json->transitionDuration->units
+msgid "Minutes"
+msgstr "Minuti"
+
+#. settings-schema.json->transitionDuration->description
+msgid "Transition Duration"
+msgstr "Durata Transizione"
+
+#. settings-schema.json->manualNightTime->description
+msgid "Use Manual Night Time"
+msgstr "Usa l'ora notturna manuale"
+
+#. settings-schema.json->nightTimeStart->description
+msgid "Choose Start Time"
+msgstr "Scegli orario di Inizio"
+
+#. settings-schema.json->nightTimeEnd->description
+msgid "Choose End Time"
+msgstr "Scegli orario di Fine"
+
 #. settings-schema.json->locationRemote->description
 msgid "Remote Location"
 msgstr "Servizio di geolocalizzazione"
@@ -249,7 +305,8 @@ msgstr "Servizio di geolocalizzazione"
 #. settings-schema.json->locationRemote->tooltip
 #. settings-schema.json->locationUpdate->tooltip
 msgid "Native geoclue on redshift can make the experience slow."
-msgstr "La geolocalizzazione integrata di redshift potrebbe causare rallentamenti."
+msgstr ""
+"La geolocalizzazione integrata di redshift potrebbe causare rallentamenti."
 
 #. settings-schema.json->locationUpdate->description
 msgid "Update Location"
@@ -274,12 +331,35 @@ msgstr ""
 #. settings-schema.json->textTips->description
 msgid "* Right-click the sliders to reset the default (neutral) value."
 msgstr ""
-"* Clicca col tasto destro del mouse sulle barre di scorrimento per riportare al valore predefinito (valore neutrale)."
+"* Clicca col tasto destro del mouse sulle barre di scorrimento per riportare "
+"al valore predefinito (valore neutrale)."
+
+#. settings-schema.json->textHelp->description
+msgid ""
+"When update to a new version make sure you reset the configs to default by "
+"deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
+"You will lost all your configs."
+msgstr ""
+"Quando esegui l'aggiornamento a una nuova versione, assicurati di "
+"ripristinare le impostazioni predefinite eliminando il file ~/.cinnamon/"
+"configs/qredshift@quintao/qredshift@quintao.json.\n"
+"Perderai tutte le tue configurazioni."
 
 #. settings-schema.json->textInfo->description
 msgid ""
-"If you like and use this applet take the time to visit it's page on Cinnamon Spices and give it a star. You only need a "
-"github account to do this."
+"If you like and use this applet take the time to visit it's page on Cinnamon "
+"Spices and give it a star. You only need a github account to do this."
 msgstr ""
-"Se apprezzi e utilizzi quest'applet, visita la pagina dedicata su Cinnamon Spices e dalle una stella. Per farlo, è "
-"richiesto semplicemente un account github."
+"Se apprezzi e utilizzi quest'applet, visita la pagina dedicata su Cinnamon "
+"Spices e dalle una stella. Per farlo, è richiesto semplicemente un account "
+"github."
+
+#~ msgid ""
+#~ "Sets brightness, gamma levels and color temperature with Redshift. This "
+#~ "applet conflicts with redshift-gtk, make sure you remove it."
+#~ msgstr ""
+#~ "Regola luminosità, gamma e temperatura del colore con Redshift. L'applet "
+#~ "va in conflitto con il pacchetto redshift-gtk. Assicurarsi di rimuoverlo."
+
+#~ msgid "Sec."
+#~ msgstr "Sec."
