--- a/files/qredshift@quintao/po/ru.po
+++ b/files/qredshift@quintao/po/ru.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-04 13:58-0300\n"
-"PO-Revision-Date: 2021-12-27 15:14-0300\n"
+"POT-Creation-Date: 2023-07-16 04:01+0200\n"
+"PO-Revision-Date: 2023-11-27 14:40-0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -16,85 +16,117 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.0.1\n"
+"X-Generator: Poedit 3.4\n"
 
-#: applet.js:115
-msgid "REDSHIFT NOT INSTALLED!"
-msgstr "REDHISFT НЕ УСТАНОВЛЕН!"
-
-#: applet.js:116
-msgid "Requires Redshift: sudo apt-get install redshift"
-msgstr "Зависимости Redshift: sudo apt-get install redshift"
-
-#: applet.js:119 applet.js:159
+#: applet.js:236
 msgid "Reload Applet"
 msgstr "Перезапустить апплет"
 
-#: applet.js:164
+#: applet.js:247
 msgid "Recompile Translations"
 msgstr "Перекомпиляция переводов"
 
+#: applet.js:299
+msgid "REDSHIFT NOT INSTALLED!"
+msgstr "REDHISFT НЕ УСТАНОВЛЕН!"
+
+#: applet.js:302
+#, fuzzy
+#| msgid "Requires Redshift: sudo apt-get install redshift"
+msgid "Requires Redshift: yay -S redshift-minimal"
+msgstr "Зависимости Redshift: sudo apt-get install redshift"
+
+#: applet.js:305
+msgid "Requires Redshift: sudo apt-get install redshift"
+msgstr "Зависимости Redshift: sudo apt-get install redshift"
+
+#: applet.js:457 applet.js:486
+msgid "should be removed."
+msgstr ""
+
+#: applet.js:479
+msgid "should be replaced by redshift-minimal"
+msgstr ""
+
 #. settings-schema.json->enabled->description
-#: applet.js:356
+#: applet.js:649
 msgid "Enabled"
 msgstr "Активно"
 
-#: applet.js:364 applet.js:410
+#: applet.js:657 applet.js:702
 msgid "Temp:"
 msgstr "Температура:"
 
-#: applet.js:375 applet.js:421
+#: applet.js:668 applet.js:713
 msgid "Bright:"
 msgstr "Яркость:"
 
-#: applet.js:387 applet.js:635
+#: applet.js:679 applet.js:1011
 msgid "Gamma:"
 msgstr "Гамма:"
 
 #. settings-schema.json->enabledNight->description
-#: applet.js:402
+#: applet.js:694
 msgid "Night Enabled"
 msgstr "Ночной режим активен"
 
 #. settings-schema.json->iconLabel->description
-#: applet.js:464
+#: applet.js:756
 msgid "Show Label"
 msgstr "Показать ярлык"
 
-#: applet.js:618
+#: applet.js:969 applet.js:994
+msgid "Transition to day"
+msgstr ""
+
+#: applet.js:970 applet.js:995
+msgid "Transition to night"
+msgstr ""
+
+#: applet.js:971 applet.js:996
+#, fuzzy
+#| msgid "Bright"
+msgid "Night"
+msgstr "Brillo"
+
+#: applet.js:972 applet.js:997
+msgid "Day"
+msgstr ""
+
+#: applet.js:986
 msgid "On"
 msgstr "Вкл."
 
-#: applet.js:618 applet.js:620
+#: applet.js:986 applet.js:988
 msgid "Off"
 msgstr "Выкл."
 
-#: applet.js:626
+#: applet.js:1002
 msgid "Day Temperature"
 msgstr "Дневная температура"
 
-#: applet.js:627
+#: applet.js:1003
 msgid "Day Brightness"
 msgstr "Дневная яркость"
 
-#: applet.js:629
+#: applet.js:1005
 msgid "Night Temperature"
 msgstr "Ночная температура"
 
-#: applet.js:630
+#: applet.js:1006
 msgid "Night Brightness"
 msgstr "Ночная яркость"
 
 #. settings-schema.json->labelScrollAction->options
 #. settings-schema.json->dayTemp->description
 #. settings-schema.json->nightTemp->description
-#: applet.js:632
+#: applet.js:1008
 msgid "Temperature"
 msgstr "Температура"
 
 #. settings-schema.json->dayBrightness->description
 #. settings-schema.json->nightBrightness->description
-#: applet.js:633
+#: applet.js:1009
 msgid "Brightness"
 msgstr "Яркость"
 
@@ -103,8 +135,10 @@ msgid "QRedshift"
 msgstr "QRedshift"
 
 #. metadata.json->description
-msgid "Sets brightness, gamma levels and color temperature with Redshift. This applet conflicts with redshift-gtk, make sure you remove it."
-msgstr "Устанавливает яркость, цветовую гамму и температуру с помощью красного смещения. Этот апплет конфликтует с redshift-gtk, обязательно удалите его."
+msgid ""
+"It makes the color of your computer's display adapt to the time of day, warm "
+"at night and like sunlight during the day."
+msgstr ""
 
 #. settings-schema.json->panel-options->title
 msgid "Settings"
@@ -151,8 +185,8 @@ msgid "Continuously adjust color temperature"
 msgstr "Плавная регулировка цветовой температуры"
 
 #. settings-schema.json->autoUpdateInterval->units
-msgid "Sec."
-msgstr "Сек."
+msgid "Seconds"
+msgstr ""
 
 #. settings-schema.json->autoUpdateInterval->description
 msgid "Update interval"
@@ -191,6 +225,23 @@ msgstr "Отключен"
 msgid "On/Off"
 msgstr "Вкл./Выкл."
 
+#. settings-schema.json->labelScrollAction->options
+msgid "Bright"
+msgstr "Brillo"
+
+#. settings-schema.json->labelScrollAction->options
+#. settings-schema.json->gammaMix->description
+msgid "Gamma"
+msgstr "Гамма"
+
+#. settings-schema.json->labelScrollAction->tooltip
+msgid "Action when scroll on applet icon."
+msgstr "Действие при прокрутке значка апплета."
+
+#. settings-schema.json->symbolicIcon->description
+msgid "Use symbolic icon"
+msgstr "В виде символьных иконок"
+
 #. settings-schema.json->keyBrightnessUp->description
 msgid "Increase brightness level"
 msgstr "Увеличить яркость"
@@ -215,19 +266,6 @@ msgstr "Увеличить цветовую гамму"
 msgid "Decrease gamma level"
 msgstr "Уменьшить цветовую гамму"
 
-#. settings-schema.json->labelScrollAction->options
-msgid "Bright"
-msgstr "Brillo"
-
-#. settings-schema.json->labelScrollAction->options
-#. settings-schema.json->gammaMix->description
-msgid "Gamma"
-msgstr "Гамма"
-
-#. settings-schema.json->labelScrollAction->tooltip
-msgid "Action when scroll on applet icon."
-msgstr "Действие при прокрутке значка апплета."
-
 #. settings-schema.json->dayTemp->units
 #. settings-schema.json->nightTemp->units
 msgid "K"
@@ -238,9 +276,33 @@ msgstr "K"
 msgid "%"
 msgstr "%"
 
+#. settings-schema.json->smoothTransition->description
+msgid "Smooth transition between day and night"
+msgstr ""
+
+#. settings-schema.json->transitionDuration->units
+msgid "Minutes"
+msgstr ""
+
+#. settings-schema.json->transitionDuration->description
+msgid "Transition Duration"
+msgstr ""
+
+#. settings-schema.json->manualNightTime->description
+msgid "Use Manual Night Time"
+msgstr "Установить ночное время вручную"
+
+#. settings-schema.json->nightTimeStart->description
+msgid "Choose Start Time"
+msgstr "Выберите начальное время"
+
+#. settings-schema.json->nightTimeEnd->description
+msgid "Choose End Time"
+msgstr "Выберите конечное время"
+
 #. settings-schema.json->locationRemote->description
 msgid "Remote Location"
-msgstr "Удалённое определение местопаложения"
+msgstr "Удалённое определение местоположения"
 
 #. settings-schema.json->locationRemote->tooltip
 #. settings-schema.json->locationUpdate->tooltip
@@ -269,32 +331,32 @@ msgstr ""
 
 #. settings-schema.json->textTips->description
 msgid "* Right-click the sliders to reset the default (neutral) value."
-msgstr "* Щелкните правой кнопкой мыши по ползунку, чтобы сбросить значение по умолчанию (нейтральное)."
-
-#. settings-schema.json->textInfo->description
-msgid "If you like and use this applet take the time to visit it's page on Cinnamon Spices and give it a star. You only need a github account to do this."
-msgstr "Если вам нравится и вы пользуетесь этим апплетом, найдите время, чтобы посетить его страницу, посвященную Cinnamon, чтобы поставьте ему звездочку. Для этого вам нужна только учетная запись на github."
-
-#. settings-schema.json->textInfo->description
-msgid ""
-"When update to a new version make sure you reset the configs to default by deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
-" You will lost all your configs."
 msgstr ""
-"При обновлении до новой версии убедитесь, что вы сбросили настройки по умолчанию, удалив ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
+"* Щелкните правой кнопкой мыши по ползунку, чтобы сбросить значение по "
+"умолчанию (нейтральное)."
+
+#. settings-schema.json->textHelp->description
+#, fuzzy
+#| msgid ""
+#| "When update to a new version make sure you reset the configs to default "
+#| "by deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao."
+#| "json.\n"
+#| " You will lost all your configs."
+msgid ""
+"When update to a new version make sure you reset the configs to default by "
+"deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
+"You will lost all your configs."
+msgstr ""
+"При обновлении до новой версии убедитесь, что вы сбросили настройки по "
+"умолчанию, удалив ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao."
+"json.\n"
 " Вы потеряете все свои настройки."
 
 #. settings-schema.json->textInfo->description
-msgid "Use symbolic icon"
-msgstr "В виде символьных иконок"
-
-#. settings-schema.json->textInfo->description
-msgid "Choose Start Time"
-msgstr "Выберите начальное время"
-
-#. settings-schema.json->textInfo->description
-msgid "Choose End Time"
-msgstr "Выберите конечное время"
-
-#. settings-schema.json->textInfo->description
-msgid "Use Manual Night Time"
-msgstr "Установить ночное время вручную"
+msgid ""
+"If you like and use this applet take the time to visit it's page on Cinnamon "
+"Spices and give it a star. You only need a github account to do this."
+msgstr ""
+"Если вам нравится и вы пользуетесь этим апплетом, найдите время, чтобы "
+"посетить его страницу, посвященную Cinnamon, чтобы поставьте ему звездочку. "
+"Для этого вам нужна только учетная запись на github."
