--- a/files/qredshift@quintao/po/hu.po
+++ b/files/qredshift@quintao/po/hu.po
@@ -329,7 +329,7 @@ msgstr ""
 
 #. settings-schema.json->textHelp->description
 msgid ""
-"When update to a new version make sure you reset the configs to default by "
+"When updating to a new version make sure you reset the configs to default by "
 "deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
 "You will lost all your configs."
 msgstr ""
