--- a/files/qredshift@quintao/po/da.po
+++ b/files/qredshift@quintao/po/da.po
@@ -333,7 +333,7 @@ msgstr "* Højreklik skyderne for at nulstille til den neutrale standardværdi."
 
 #. settings-schema.json->textHelp->description
 msgid ""
-"When update to a new version make sure you reset the configs to default by "
+"When updating to a new version make sure you reset the configs to default by "
 "deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
 "You will lost all your configs."
 msgstr ""
