--- a/files/qredshift@quintao/po/ru.po
+++ b/files/qredshift@quintao/po/ru.po
@@ -338,12 +338,12 @@ msgstr ""
 #. settings-schema.json->textHelp->description
 #, fuzzy
 #| msgid ""
-#| "When update to a new version make sure you reset the configs to default "
+#| "When updating to a new version make sure you reset the configs to default "
 #| "by deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao."
 #| "json.\n"
 #| " You will lost all your configs."
 msgid ""
-"When update to a new version make sure you reset the configs to default by "
+"When updating to a new version make sure you reset the configs to default by "
 "deleting the ~/.cinnamon/configs/qredshift@quintao/qredshift@quintao.json.\n"
 "You will lost all your configs."
 msgstr ""
