--- a/files/qredshift@quintao/po/qredshift@quintao.pot
+++ b/files/qredshift@quintao/po/qredshift@quintao.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-28 02:32-0300\n"
+"POT-Creation-Date: 2024-07-01 03:48-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,112 +17,126 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: applet.js:259
+#: applet.js:284
 msgid "Reload Applet"
 msgstr ""
 
-#: applet.js:265
+#: applet.js:290
 msgid "Generate .POT file"
 msgstr ""
 
-#: applet.js:270
+#: applet.js:295
 msgid "Recompile Translations"
 msgstr ""
 
-#: applet.js:332 applet.js:663
+#: applet.js:344 applet.js:348
 msgid "Not supported on wayland!"
 msgstr ""
 
-#: applet.js:341 applet.js:342
-msgid "Something went wrong!"
-msgstr ""
-
-#: applet.js:463 applet.js:492
-msgid "should be removed."
-msgstr ""
-
-#: applet.js:485
-msgid "should be replaced by redshift-minimal"
-msgstr ""
-
-#: applet.js:517
-msgid "package can be removed."
-msgstr ""
-
-#: applet.js:520
-msgid "Old Redshift package is no longer required and can be safely removed."
-msgstr ""
-
-#: applet.js:667
+#: applet.js:351
 msgid ""
 "Automatically disabled under Wayland due to cinnamon compositor not yet "
 "support gamma ramps change."
 msgstr ""
 
+#: applet.js:362 applet.js:368
+msgid "Unsupported architecture"
+msgstr ""
+
+#: applet.js:371
+msgid "Unsupported architecture, click here to report."
+msgstr ""
+
+#: applet.js:400 applet.js:401
+msgid "Something went wrong!"
+msgstr ""
+
+#: applet.js:540
+msgid "package can be removed."
+msgstr ""
+
+#: applet.js:543
+msgid "Old Redshift package is no longer required and can be safely removed."
+msgstr ""
+
+#: applet.js:595
+msgid "Error searching for your location"
+msgstr ""
+
+#. settings-schema.json->nightTimeStart->description
+#: applet.js:740
+msgid "Sunset"
+msgstr ""
+
+#. settings-schema.json->nightTimeEnd->description
+#: applet.js:741
+msgid "Sunrise"
+msgstr ""
+
 #. settings-schema.json->enabled->description
-#: applet.js:677
+#: applet.js:752
 msgid "Enabled"
 msgstr ""
 
-#: applet.js:685 applet.js:730
+#: applet.js:760 applet.js:805
 msgid "Temp:"
 msgstr ""
 
-#: applet.js:696 applet.js:741
+#: applet.js:771 applet.js:816
 msgid "Bright:"
 msgstr ""
 
-#: applet.js:707 applet.js:1009
+#: applet.js:782 applet.js:1100
 msgid "Gamma:"
 msgstr ""
 
 #. settings-schema.json->enabledNight->description
-#: applet.js:722
+#: applet.js:797
 msgid "Night Enabled"
 msgstr ""
 
 #. settings-schema.json->iconLabel->description
-#: applet.js:786
+#: applet.js:861
 msgid "Show Label"
 msgstr ""
 
-#: applet.js:959 applet.js:985
+#: applet.js:1050 applet.js:1076
 msgid "Transition to day"
 msgstr ""
 
-#: applet.js:960 applet.js:986
+#: applet.js:1051 applet.js:1077
 msgid "Transition to night"
 msgstr ""
 
-#: applet.js:961 applet.js:987
+#: applet.js:1052 applet.js:1078
 msgid "Night"
 msgstr ""
 
-#: applet.js:962 applet.js:988
+#: applet.js:1053 applet.js:1079
 msgid "Day"
 msgstr ""
 
-#: applet.js:978
+#: applet.js:1069
 msgid "On"
 msgstr ""
 
-#: applet.js:978 applet.js:979
+#: applet.js:1069 applet.js:1070
 msgid "Off"
 msgstr ""
 
-#: applet.js:1000
+#: applet.js:1091
 msgid "Day Temperature"
 msgstr ""
 
-#: applet.js:1001
+#: applet.js:1092
 msgid "Day Brightness"
 msgstr ""
 
-#: applet.js:1003
+#: applet.js:1094
 msgid "Night Temperature"
 msgstr ""
 
-#: applet.js:1004
+#: applet.js:1095
 msgid "Night Brightness"
 msgstr ""
 
@@ -130,14 +144,14 @@ msgstr ""
 #. settings-schema.json->dayTemp->description
 #. settings-schema.json->nightTemp->description
 #. settings-schema.json->stepTemp->description
-#: applet.js:1006
+#: applet.js:1097
 msgid "Temperature"
 msgstr ""
 
 #. settings-schema.json->dayBrightness->description
 #. settings-schema.json->nightBrightness->description
 #. settings-schema.json->stepBright->description
-#: applet.js:1007
+#: applet.js:1098
 msgid "Brightness"
 msgstr ""
 
@@ -151,16 +165,32 @@ msgid ""
 " at night and like sunlight during the day."
 msgstr ""
 
-#. settings-schema.json->panel-options->title
-msgid "Settings"
+#. settings-schema.json->panel-general->title
+msgid "General"
+msgstr ""
+
+#. settings-schema.json->panel-temperature->title
+msgid "Temperatures"
+msgstr ""
+
+#. settings-schema.json->panel-location->title
+msgid "Location"
 msgstr ""
 
 #. settings-schema.json->panel-shortcuts->title
 msgid "Shortcuts"
 msgstr ""
 
-#. settings-schema.json->opt-section->title
+#. settings-schema.json->panel-help->title
+msgid "Help"
+msgstr ""
+
+#. settings-schema.json->section-options->title
 msgid "Options"
+msgstr ""
+
+#. settings-schema.json->section-behavior->title
+msgid "Behavior"
 msgstr ""
 
 #. settings-schema.json->day-section->title
@@ -179,17 +209,26 @@ msgstr ""
 msgid "Step"
 msgstr ""
 
-#. settings-schema.json->info-section->title
+#. settings-schema.json->location-section->title
+msgid "Location Settings"
+msgstr ""
+
+#. settings-schema.json->section-tips->title
 msgid "Tips"
 msgstr ""
 
-#. settings-schema.json->enableAtStartup->description
-msgid "Reactivate QRedshift as soon as Cinnamon starts up"
+#. settings-schema.json->section-project->title
+msgid "More about QRedshift"
 msgstr ""
 
+#. settings-schema.json->section-debug->title
+#. settings-schema.json->debugToggle->description
+msgid "Debug"
+msgstr ""
+
+#. settings-schema.json->enableAtStartup->description
 #. settings-schema.json->enableAtStartup->tooltip
-msgid ""
-"Won't work under Wayland due to redshift not being yet supported by Wayland"
+msgid "Reactivate QRedshift as soon as Cinnamon starts up"
 msgstr ""
 
 #. settings-schema.json->autoUpdate->description
@@ -239,16 +278,6 @@ msgstr ""
 msgid "Use symbolic icon"
 msgstr ""
 
-#. settings-schema.json->dayTemp->units
-#. settings-schema.json->nightTemp->units
-msgid "K"
-msgstr ""
-
-#. settings-schema.json->dayBrightness->units
-#. settings-schema.json->nightBrightness->units
-msgid "%"
-msgstr ""
-
 #. settings-schema.json->smoothTransition->description
 msgid "Smooth transition between day and night"
 msgstr ""
@@ -261,12 +290,18 @@ msgstr ""
 msgid "Transition Duration"
 msgstr ""
 
-#. settings-schema.json->nightTimeStart->description
-msgid "Choose Start Time"
+#. settings-schema.json->dayTemp->units
+#. settings-schema.json->nightTemp->units
+msgid "K"
 msgstr ""
 
-#. settings-schema.json->nightTimeEnd->description
-msgid "Choose End Time"
+#. settings-schema.json->dayBrightness->units
+#. settings-schema.json->nightBrightness->units
+msgid "%"
+msgstr ""
+
+#. settings-schema.json->manualNightTime->description
+msgid "Use Manual Night Time"
 msgstr ""
 
 #. settings-schema.json->keyBrightnessUp->description
@@ -302,8 +337,43 @@ msgstr ""
 msgid "Step when changing value by shortcuts"
 msgstr ""
 
+#. settings-schema.json->locationRemote->description
+msgid "Remote Location"
+msgstr ""
+
+#. settings-schema.json->locationRemote->tooltip
+#. settings-schema.json->locationUpdate->tooltip
+msgid "Native geoclue on redshift can make the experience slow."
+msgstr ""
+
+#. settings-schema.json->locationUpdate->description
+msgid "Update Location"
+msgstr ""
+
+#. settings-schema.json->locationCity->description
+msgid "City"
+msgstr ""
+
+#. settings-schema.json->locationCity->tooltip
+msgid "Current City"
+msgstr ""
+
+#. settings-schema.json->locationLatitude->description
+msgid "Latitude"
+msgstr ""
+
+#. settings-schema.json->locationLongitude->description
+msgid "Longitude"
+msgstr ""
+
+#. settings-schema.json->aboutLocation->description
+msgid ""
+"This location is approximate! If it is wrong or if you want a more precise "
+"calculation, enter it manually."
+msgstr ""
+
 #. settings-schema.json->textTips->description
-msgid "* Right-click the sliders to reset the default (neutral) value."
+msgid "Right-click the sliders to reset the default (neutral) value."
 msgstr ""
 
 #. settings-schema.json->textHelp->description
@@ -314,6 +384,14 @@ msgstr ""
 
 #. settings-schema.json->textInfo->description
 msgid ""
-"If you like and use this applet take the time to visit it's page on Cinnamon"
-" Spices and give it a star. You only need a github account to do this."
+"If you like and use this applet take the time to visit it's page on Github "
+"and give it a star."
+msgstr ""
+
+#. settings-schema.json->btnOpenGithub->description
+msgid "QRedshift at GitHub"
+msgstr ""
+
+#. settings-schema.json->btnOpenGithubIssue->description
+msgid "Submit an Issue"
 msgstr ""
